--- a/src/assets/table.scss
+++ b/src/assets/table.scss
@@ -1,12 +1,24 @@
+main {
+    margin: 3% 10%;
+}
+
 table {
-    margin: 0 10%;
     color: white;
-    width: 80%;
+    width: 100%;
     border: 3px solid black;
     border-collapse: collapse;
+    .tabel__name {
+        display: flex;
+        flex-direction: column;
+        gap: 5px;
+    }
     tr {
-        border: 1px solid rgb(60, 60, 60);
-        
+        cursor: pointer;
+        border: 1px solid rgb(45, 45, 45);
+    }
+    tr:hover {
+        background-color: rgb(46, 46, 46);
+        transition: all .2s ease-in;
     }
     thead {
         text-align: center;
@@ -18,9 +30,28 @@ table {
     tbody {
         background-color: rgb(58, 58, 58);
         td {
+            vertical-align: middle;
             padding: 1.2em 0;
             text-align: center;
         }
     }
 }
-  
+
+.button__add-crypto {
+    background-color: rgba(0, 0, 0, 0.39);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: rgb(150, 150, 150);
+    font-size: 30px;
+    width: 1em;
+    margin: 0 20%;
+    height: 1em;
+    border-radius: 20%;
+}
+
+.button__add-crypto:hover {
+    background-color: rgba(0, 0, 0, 0.59);
+    color: white;
+    transition: all .3s ease-in;
+}
