--- a/src/assets/cryptopage.scss
+++ b/src/assets/cryptopage.scss
@@ -1,7 +1,6 @@
 .crypto__info__cont {
     display: flex;
     gap: 10%;
-    height: 100%;
     justify-content: start;
 }
 
@@ -59,4 +58,10 @@
     .crypto__info__left__button {
         margin: 0;
     }    
+}
+
+.crypto__graph {
+    margin: 5% auto;
+    font-size: .9em;
+    
 }
